--- a/gastos-casa/package.json
+++ b/gastos-casa/package.json
@@ -23,9 +23,20 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.11.0",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@tanstack/react-table": "^8.21.3",
     "@types/sqlite3": "^5.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "csv-writer": "^1.6.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.525.0",
     "multer": "^2.0.1",
     "next": "^15.3.4",
@@ -33,8 +44,11 @@
     "prisma": "^6.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
+    "recharts": "^3.0.2",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.3.1",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
@@ -46,6 +60,8 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
+    "eslint": "^9.30.1",
+    "eslint-config-next": "^15.3.4",
     "jest": "^30.0.3",
     "jest-environment-jsdom": "^30.0.2",
     "postcss": "^8.5.6",
