feat: enhance package.json with new scripts and dependencies
- Added type-check, test:coverage, build:analyze, build:production, postbuild, clean, clean:all, setup, check, format, and format:check scripts.
- Updated dependencies: added @radix-ui/react-progress, sonner, and @tailwindcss/postcss.
- Updated devDependencies: added @types/jest and next-themes.

fix: update postcss.config.js to use @tailwindcss/postcss

refactor: improve Prisma schema with additional indexes for Movimiento and ReglaCategorizacion models

feat: add backup script for database

feat: add cleanup script to remove old data from the database

feat: add restore script to restore database from backups

--- a/gastos-casa/package.json
+++ b/gastos-casa/package.json
@@ -8,15 +8,29 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "type-check": "tsc --noEmit",
     "test": "jest",
     "test:unit": "jest __tests__/unit",
     "test:integration": "jest __tests__/integration",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:seed": "tsx prisma/seed.ts",
-    "db:reset": "prisma migrate reset",
-    "db:studio": "prisma studio"
+    "db:reset": "prisma migrate reset --force",
+    "db:studio": "prisma studio",
+    "db:backup": "node scripts/backup.js",
+    "db:restore": "node scripts/restore.js",
+    "db:cleanup": "node scripts/cleanup.js",
+    "build:analyze": "ANALYZE=true npm run build",
+    "build:production": "npm run type-check && npm run lint && npm run test && npm run build",
+    "postbuild": "echo 'Build completed successfully!'",
+    "clean": "rm -rf .next node_modules/.cache",
+    "clean:all": "rm -rf .next node_modules dist coverage",
+    "setup": "npm install && npx prisma generate && npx prisma db push && npm run db:seed",
+    "check": "npm run type-check && npm run lint",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "keywords": [],
   "author": "",
@@ -28,6 +42,7 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
@@ -46,14 +61,17 @@
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "recharts": "^3.0.2",
+    "sonner": "^2.0.5",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.0.10",
     "@types/pdf-parse": "^1.1.5",
@@ -64,6 +82,7 @@
     "eslint-config-next": "^15.3.4",
     "jest": "^30.0.3",
     "jest-environment-jsdom": "^30.0.2",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "tsx": "^4.20.3",
