--- a/gastos-casa/package.json
+++ b/gastos-casa/package.json
@@ -38,20 +38,27 @@
   "dependencies": {
     "@prisma/client": "^6.11.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.12",
     "@types/sqlite3": "^5.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "csv-writer": "^1.6.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
     "multer": "^2.0.1",
     "next": "^15.3.4",
@@ -65,10 +72,10 @@
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5",
+    "zod": "^3.25.71",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
@@ -84,7 +91,7 @@
     "jest-environment-jsdom": "^30.0.2",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
