--- a/gastos-casa/package.json
+++ b/gastos-casa/package.json
@@ -55,6 +55,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.12",
+    "@types/redis": "^4.0.11",
     "@types/sqlite3": "^5.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -72,6 +73,7 @@
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "recharts": "^3.0.2",
+    "redis": "^5.5.6",
     "sonner": "^2.0.5",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.3.1",
